# score_board

./: Cargo.toml
src/: app_common.rs  lib.rs  main.rs
src/ui/: color_scheme.rs  font_config.rs  grid_config.rs  mod.rs  score_grid.rs  widget.rs
src/windows/: mod.rs  root.rs  score_window.rs
